--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.terer.merchant.app.terer_merchant">
+    package="com.terer.merchant.app">
    <application
         android:label="@string/app_name"
         android:name="${applicationName}"
