--- a/ios/Runner/Flavors/production/Info.plist
+++ b/ios/Runner/Flavors/production/Info.plist
@@ -45,5 +45,7 @@
 	<false/>
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>This app requires access to your camera to scan barcodes</string>
 </dict>
 </plist>
