--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+2
+version: 1.0.0+3
 
 environment:
   sdk: ">=2.17.6 <3.0.0"
@@ -100,10 +100,10 @@ flutter_native_splash:
 flutter_icons:
   android: "ic_launcher"
   ios: false
-  # adaptive_icon_background: "assets/icons/app_icon/android/app_bg.png"
-  # adaptive_icon_foreground: "assets/icons/app_icon/android/app_fg.png"
+  adaptive_icon_background: "assets/icons/app_icon/android/app_bg.png"
+  adaptive_icon_foreground: "assets/icons/app_icon/android/app_fg.png"
   image_path: "assets/icons/app_icon/android/app_logo.png"
-  remove_alpha_ios: true
+  remove_alpha_ios: false
   web:
     generate: false
   windows:
