--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -47,5 +47,7 @@
 	<true/>
 	<key>NSCameraUsageDescription</key>
 	<string>This app requires access to your camera to scan barcodes</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Requires Photo Library Usage</string>
 </dict>
 </plist>
