WIP: checkin code for merchant APP

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
     "java.configuration.updateBuildConfiguration": "disabled",
-    "dart.flutterSdkPath": "D:\\sw\\fvm-versions\\3.3.3"
+    "dart.flutterSdkPath": "/Applications/software/flutter_latest"
   }
   
