--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,9 @@ dependencies:
   hive: 2.2.2
   path_provider: 2.0.11
   flutter_haptic: 0.0.3
+  package_info_plus: 1.3.0
+  awesome_notifications: 0.7.4+1
+
   # webview_flutter: 3.0.4
   webviewx: 0.2.1
   vibration: 1.7.4-nullsafety.0
@@ -72,6 +75,13 @@ dependencies:
   http: 0.13.4
   cached_network_image: 3.2.1
   url_launcher: 6.1.5
+
+  # Firebase
+  firebase_core: 2.4.1
+  firebase_remote_config: 3.0.9
+  firebase_messaging: 14.1.0
+  firebase_core_platform_interface: 4.6.0
+
 
 dev_dependencies:
   flutter_test:
