wip: place order screen

--- a/ios/firebase_app_id_file.json
+++ b/ios/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:636670550777:ios:236b82bcd3433eb607f828",
-  "FIREBASE_PROJECT_ID": "terer-development",
-  "GCM_SENDER_ID": "636670550777"
+  "GOOGLE_APP_ID": "1:691460979105:ios:9fe7d04aad42f60ad073e0",
+  "FIREBASE_PROJECT_ID": "terer-46a1f",
+  "GCM_SENDER_ID": "691460979105"
 }
