--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,8 @@ dependencies:
   flutter_haptic: 0.0.3
   package_info_plus: 1.3.0
   awesome_notifications: 0.7.4+1
+  easy_debounce: 2.0.3
+
 
   # webview_flutter: 3.0.4
   webviewx: 0.2.1
