--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -49,5 +49,7 @@
 	<string>This app requires access to your camera to scan barcodes</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Requires Photo Library Usage</string>
+	<key>UIApplicationSupportsIndirectInputEvents</key>
+	<true/>
 </dict>
 </plist>
